fix CI error on go sum

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,6 +39,11 @@ jobs:
         run: |
           go mod download
 
+      - name: Ensure module files are tidy
+        shell: pwsh
+        run: |
+          go mod tidy
+
       - name: Build (PowerShell script)
         shell: pwsh
         run: |
